# Cravio

./: .gitattributes  .gitignore  CLAUDE.md  Cravio requirements.docx  README.md
.design-sync/: NOTES.md  config.json
admin/: CLAUDE.md  README.md
api/: .env.example  CLAUDE.md  README.md  docker-compose.yml  dummy_secret_test.py  pyproject.toml  requirements-dev.txt
api/app/: main.py
api/app/core/: config.py  db.py  dependencies.py  redis_client.py  security.py
api/app/models/: __init__.py  brand.py  influencer.py  user.py
api/app/routers/: auth.py  brand.py  health.py  influencer.py
api/app/schemas/: auth.py  brand.py  health.py  influencer.py
api/app/scripts/: export_openapi.py
api/app/services/: registry.py
api/app/services/ai/: base.py  live.py  stub.py
api/app/services/auth/: base.py  live.py  stub.py
api/app/services/notification/: base.py  live.py  stub.py
api/app/services/payment/: base.py  live.py  stub.py
api/app/services/search/: base.py  live.py  stub.py
api/app/services/verification/: base.py  live.py  stub.py
api/migrations/: env.py
api/migrations/versions/: 0001_baseline_users.py  0002_add_firebase_uid_nullable_role.py  0003_add_influencer_profile_social_snapshot.py  0004_add_brand_profiles.py
api/tests/: conftest.py  test_auth_router.py  test_brand_router.py  test_brand_schemas.py  test_health.py  test_influencer_models.py  test_influencer_router.py  test_influencer_schemas.py  test_migrations.py  test_openapi_export.py  test_provider_config.py  test_smoke.py
api/tests/services/: test_ai.py  test_auth.py  test_notification.py  test_payment.py  test_provider_isolation.py  test_registry.py  test_search.py  test_verification.py
docs/: P0-task-cards.md  backlog.yaml  claude-code-foundation-prompts.md  design-brief.md  dev-setup.md  openapi.yaml  status.html
infra/: CLAUDE.md  README.md
mobile/: App.tsx  CLAUDE.md  README.md  app.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
(+78 files in other folders)
