[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cravio-api"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "fastapi[all]>=0.138.0",
  "gunicorn>=26.0.0",
  "httpx2>=2.4.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "PyJWT>=2.10.1",
  "pyyaml>=6.0.3",
  "redis>=8.0.1",
  "sqlalchemy[asyncio]>=2.0.51",
  "uvicorn>=0.49.0",
]
[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "ruff>=0.15.19"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
